# tello_interface

./: CMakeLists.txt  package.xml  testtello.py
action/: SineMove.action
include/tello_interface/: teleop_widget.h
launch/: launch_gazebo_tello.py  launch_real_tello.py
plotjuggler/: layout.xml  tello.perspective
src/: teleop_widget.cpp  tello_interface_node.cpp
srv/: SineCommand.srv
